--- a/press/index.html
+++ b/press/index.html
@@ -6,7 +6,7 @@ gtag('config', 'UA-118448452-1');
       <div class="container-fluid">
          <div class="navbar">
            <div class="row">
-               <div class="col-xs-2"><a href="../"><img src="./img/logo.svg" class="logo"></a></div>
+               <div class="col-xs-2"><a href="../"><img src="../img/logo.svg" class="logo"></a></div>
                <div class="col-xs-10">
                   <ul class="nav-item">
                      <a href="../">
@@ -44,8 +44,8 @@ gtag('config', 'UA-118448452-1');
          <div class="navbar-mobile">
             <div class="row">
                <div class="col-xs-12">
-                  <div class="logo"><a href="../"><img src="./img/logo.svg"></a></div>
-                  <div class="menu-button"><img src="./img/icon-menu-btn.svg"></div>
+                  <div class="logo"><a href="../"><img src="../img/logo.svg"></a></div>
+                  <div class="menu-button"><img src="../img/icon-menu-btn.svg"></div>
                   <ul class="nav-item">
                      <a href="../">
                         <li>Home</li>
