--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                      <a href="./press">
                         <li>Press</li>
                      </a>
-                     <a href="https://medium.com/@kgmcnamara" target="_blank">
+                     <a href="mailto:info@paralleldomain.com" target="_blank">
                         <li>
                            Contact Us
                         </li>
