Enter the PD page: new text and mailto link

--- a/enter-pd/index.html
+++ b/enter-pd/index.html
@@ -155,10 +155,10 @@
   </a>
 </div>
                </div>
-               <div class="col-xs-6" style="text-align: center;">
-                  <h1>Enter the Parallel Domain</h1>
-                  <p class="">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-                  <a href="#">
+               <div class="col-xs-6">
+                  <h1 style="text-transform: uppercase;">Enter the Parallel Domain</h1>
+                  <p class="">Automating the creation of virtual worlds.<br><br>In the Parallel Domain world portal, you can view and explore the continuously-expanding virtual worlds offered by Parallel Domain in your web browser. <br><br>Welcome to Parallel Domain.</p>
+                  <a href="mailto: info@paralleldomain.com?subject=Enter the Parallel Domain&body=Do you have any feedback for us?" target="_blank">
                      <button class="btn large btn-login-pd">Login to Parallel Domain</button>
                   </a>
                </div>
