Alignment fixes. Message template added to mailto.

--- a/enter-pd/index.html
+++ b/enter-pd/index.html
@@ -155,10 +155,11 @@
   </a>
 </div>
                </div>
-               <div class="col-xs-6">
+               <div class="col-xs-6" style="text-align: center;">
                   <h1 style="text-transform: uppercase;">Enter the Parallel Domain</h1>
-                  <p class="">Automating the creation of virtual worlds.<br><br>In the Parallel Domain world portal, you can view and explore the continuously-expanding virtual worlds offered by Parallel Domain in your web browser. <br><br>Welcome to Parallel Domain.</p>
-                  <a href="mailto: info@paralleldomain.com?subject=Enter the Parallel Domain&body=Do you have any feedback for us?" target="_blank">
+                  <h5 style="padding-bottom: 20px">Automating the creation of virtual worlds.</h2>
+                  <p style="text-align: left;">In the Parallel Domain world portal, you can view and explore the continuously-expanding virtual worlds offered by Parallel Domain in your web browser. <br><br>Welcome to Parallel Domain.</p>
+                  <a href="mailto: info@paralleldomain.com?subject=Requesting Info about Parallel Domain World Portal&body=Name:%0D%0AAssociation:%0D%0AHow did you hear about us?:%0D%0A%0D%0AMessage:%0D%0A" target="_blank">
                      <button class="btn large btn-login-pd">Login to Parallel Domain</button>
                   </a>
                </div>
