--- a/enter-pd/index.html
+++ b/enter-pd/index.html
@@ -127,7 +127,7 @@
       <section>
          <div class="container">
             <div class="row center-xs">
-               <div class="col-xs-6">
+               <div class="col-xl-6 col-md-6 col-log-6 col-12 enter-pd-slider">
                 <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
   <ol class="carousel-indicators">
     <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -155,7 +155,7 @@
   </a>
 </div>
                </div>
-               <div class="col-xs-6" style="text-align: center;">
+               <div class="col-xl-6 col-md-6 col-log-6 col-12 enter-pd-text">
                   <h1 style="text-transform: uppercase;">Enter the Parallel Domain</h1>
                   <h5 style="padding-bottom: 20px">Automating the creation of virtual worlds.</h2>
                   <p style="text-align: left;">In the Parallel Domain world portal, you can view and explore the continuously-expanding virtual worlds offered by Parallel Domain in your web browser. <br><br>Welcome to Parallel Domain.</p>
