Small improvements, links and icons hovers

--- a/company/index.html
+++ b/company/index.html
@@ -164,7 +164,7 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="leadership-card">
                             <div class="row">
-                                <div class="col-xs-12 col-sm-6">
+                                <div class="col-xs-12 col-sm-12 col-lg-6">
                                     <div class="team-image"><img src="../img/team-kevin.jpg"></div>
                                     <div class="social-icon-nest">
                                         <a href="https://www.linkedin.com/in/kgmcnamara/" target="_blank">
@@ -175,7 +175,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-6">
+                                <div class="col-xs-12 col-sm-12 col-lg-6">
                                     <h3>Kevin McNamara</h3>
                                     <h6>Founder & CEO</h6>
                                     <p>Kevin brings deep computer graphics experience having built and led a team within Apple's Special Projects Group focused on autonomous systems simulation. Previously, he architected and implemented procedural content systems for Microsoft Game Studios and contributed to academy award winning films at Pixar Animation Studios.</p>
@@ -186,7 +186,7 @@
                     <div class="col-xs-12 col-sm-6">
                         <div class="leadership-card">
                             <div class="row">
-                                <div class="col-xs-12 col-sm-6">
+                                <div class="col-xs-12 col-sm-12 col-lg-6">
                                     <div class="team-image"><img src="../img/team-james.jpg"></div>
                                     <div class="social-icon-nest">
                                         <a href="https://www.linkedin.com/in/jamesgrieve/" target="_blank">
@@ -197,7 +197,7 @@
                                         </a>
                                     </div>
                                 </div>
-                                <div class="col-xs-12 col-sm-6">
+                                <div class="col-xs-12 col-sm-12 col-lg-6">
                                     <h3>James Grieve</h3>
                                     <h6>CTO</h6>
                                     <p>With over 20 years of experience in the video game and tech industries at companies such as Apple, Electronic Arts and United Front Games, James brings an extensive knowledge of real-time graphics and engineering management to the world of autonomous vehicle simulation. He has led teams building world-class, AAA games such as Need for Speed, Sleeping Dogs and ModNation: Racers along with many others.</p>
@@ -223,7 +223,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center margin-bottom-l">
-                        <h5>Advisors</h5></div>
+                        <h2>Advisors</h2></div>
                 </div>
                 <div class="row center-xs">
                     <div class="col-xs-12 col-sm-3 advisor">
@@ -257,7 +257,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-xs-12 text-center margin-bottom-l">
-                        <h5>Investors</h5></div>
+                        <h2>Investors</h2></div>
                 </div>
                 <div class="row center-xs">
                     <div class="col-xs-12 col-sm">
