--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
          <div class="container">
             <div class="row text-center">
                <div class="col-xs-12">
-                  <h6>OUR SOLUTION</h6>
+                  <h2 style="color: #fff">OUR SOLUTION</h2>
                   <p>Parallel Domain is a leading provider of 3D environment generation software for autonomous vehicle simulation. Our groundbreaking content generation technology offers configurable, detailed, and massively scalable simulation environments. Whether you’re generating an entirely new city or tweaking the details on a single street corner, our systems will produce living worlds that have traditionally required extensive manual labor. Plug our content into your existing simulation solution and outdrive your competitor’s entire catalogue overnight. Generate a new world and do it again tomorrow.</p>
                </div>
             </div>
