--- a/enter-pd/index.html
+++ b/enter-pd/index.html
@@ -57,6 +57,9 @@
                      <a href="../press">
                         <li>Press</li>
                      </a>
+                     <a href="../joinus">
+                        <li>Join Us</li>
+                     </a>
                                          
                       <a href="mailto:info@paralleldomain.com" target="_blank">
                         <li>
@@ -98,6 +101,9 @@
                      </a>
                      <a href="../press">
                         <li>Press</li>
+                     </a>
+                     <a href="../joinus">
+                        <li>Join Us</li>
                      </a>
                      <a href="mailto:info@paralleldomain.com" target="_blank">
                         <li>
