--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                      <a href="./press">
                         <li>Press</li>
                      </a>
+                     <a href="./joinus">
+                        <li>Join Us</li>
+                     </a>
                                          
                       <a href="mailto:info@paralleldomain.com" target="_blank">
                         <li>
@@ -90,6 +93,9 @@
                      </a>
                      <a href="./press">
                         <li>Press</li>
+                     </a>
+                     <a href="./joinus">
+                        <li>Join Us</li>
                      </a>
                      <a href="mailto:info@paralleldomain.com" target="_blank">
                         <li>
