--- a/enter-pd/index.html
+++ b/enter-pd/index.html
@@ -142,13 +142,13 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100 carousel-img" src="../img/slide1.png" alt="First slide">
+      <img class="d-block w-100 carousel-img" src="../img/slide1.jpg" alt="First slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100 carousel-img" src="../img/slide2.png" alt="Second slide">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100 carousel-img" src="../img/slide3.png" alt="Third slide">
+      <img class="d-block w-100 carousel-img" src="../img/slide3.jpg" alt="Third slide">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
