Join us page small tweaks.

--- a/joinus/index.html
+++ b/joinus/index.html
@@ -145,8 +145,8 @@
                     <p>We're already multiplying our customers' simulation mileage and we're looking for talented visionaries help us to expand our impact on the way the industry simulates. We're a
 nerdy, loveable, and highly-driven team that values doing things right and driving the world towards a safer domain – join us!</p>
                     <div class="col-xs-12">
-                        <a href="mailto:jobs@paralleldomain.com?body=Please attach a cover letter and your resumé or LinkedIn profile. In the subject line, please add the job title you are applying for.">
-                            <button>Apply to PD</button>
+                        <a href="mailto:jobs@paralleldomain.com?body=In the subject line, please add the position title you are applying for. In the email, please tell us why you are interested in joining Parallel Domain and why you are applying for the position. Please also include your resume and/or LinkedIn profile.">
+                            <button>APPLY TO PARALLEL DOMAIN</button>
                         </a>
                     </div>
 
