Customer login button hover improvement

--- a/joinus/index.html
+++ b/joinus/index.html
@@ -145,7 +145,11 @@
                     <p>We're already multiplying our customers' simulation mileage and we're looking for talented visionaries help us to expand our impact on the way the industry simulates. We're a
 nerdy, loveable, and highly-driven team that values doing things right and driving the world towards a safer domain – join us!</p>
                     <div class="col-xs-12">
-                        <a href="mailto:jobs@paralleldomain.com?body=In the subject line, please add the position title you are applying for. In the email, please tell us why you are interested in joining Parallel Domain and why you are applying for the position. Please also include your resume and/or LinkedIn profile.">
+                        <a href="mailto:jobs@paralleldomain.com?body=In the subject line, please add FULL NAME and POSITION TITLE you are applying for.%0D%0A%0D%0A
+
+In the email, please tell us what excites you about Parallel Domain and why you are applying for the position. As a company, we care about creating an environment where people can be creative, focused, empathetic, and inspired. Feel free to highlight what this means to you, how you may be a good fit, and/or how you would like to add to the culture. :-)%0D%0A%0D%0A
+
+Please also include your resume, portfolio, and/or LinkedIn profile. We'll be in touch with you in a few days! Thanks for applying -- we look forward to seeing you in the parallel domain." target="_blank">
                             <button>APPLY TO PARALLEL DOMAIN</button>
                         </a>
                     </div>
@@ -185,7 +189,11 @@ nerdy, loveable, and highly-driven team that values doing things right and drivi
                                     <li>Collaborating with teammates on the strategic direction of PD’s offerings</li>
                                     <li>And much, much more!</li>
                                 </ul>
-                                <a href="mailto:jobs@paralleldomain.com">
+                                <a href="mailto:jobs@paralleldomain.com?body=In the subject line, please add FULL NAME and POSITION TITLE you are applying for.%0D%0A%0D%0A
+
+In the email, please tell us what excites you about Parallel Domain and why you are applying for the position. As a company, we care about creating an environment where people can be creative, focused, empathetic, and inspired. Feel free to highlight what this means to you, how you may be a good fit, and/or how you would like to add to the culture. :-)%0D%0A%0D%0A
+
+Please also include your resume, portfolio, and/or LinkedIn profile. We'll be in touch with you in a few days! Thanks for applying -- we look forward to seeing you in the parallel domain." target="_blank">
                                     <button>Apply</button>
                                 </a>
                             </div>
@@ -218,7 +226,11 @@ nerdy, loveable, and highly-driven team that values doing things right and drivi
                                 <li>Collaborating with awesome teammates on the strategic direction of PD’s offerings</li>
                                 <li>And much, much more!</li>
                             </ul>
-                            <a href="mailto:jobs@paralleldomain.com">
+                            <a href="mailto:jobs@paralleldomain.com?body=In the subject line, please add FULL NAME and POSITION TITLE you are applying for.%0D%0A%0D%0A
+
+In the email, please tell us what excites you about Parallel Domain and why you are applying for the position. As a company, we care about creating an environment where people can be creative, focused, empathetic, and inspired. Feel free to highlight what this means to you, how you may be a good fit, and/or how you would like to add to the culture. :-)%0D%0A%0D%0A
+
+Please also include your resume, portfolio, and/or LinkedIn profile. We'll be in touch with you in a few days! Thanks for applying -- we look forward to seeing you in the parallel domain." target="_blank">
                                 <button>Apply</button>
                             </a>
                         </div>
@@ -248,7 +260,11 @@ nerdy, loveable, and highly-driven team that values doing things right and drivi
                                 <li>Establishing robust unit & regression testing</li>
                                 <li>And much, much more!</li>
                             </ul>
-                            <a href="mailto:jobs@paralleldomain.com">
+                            <a href="mailto:jobs@paralleldomain.com?body=In the subject line, please add FULL NAME and POSITION TITLE you are applying for.%0D%0A%0D%0A
+
+In the email, please tell us what excites you about Parallel Domain and why you are applying for the position. As a company, we care about creating an environment where people can be creative, focused, empathetic, and inspired. Feel free to highlight what this means to you, how you may be a good fit, and/or how you would like to add to the culture. :-)%0D%0A%0D%0A
+
+Please also include your resume, portfolio, and/or LinkedIn profile. We'll be in touch with you in a few days! Thanks for applying -- we look forward to seeing you in the parallel domain." target="_blank">
                                 <button>Apply</button>
                             </a>
                         </div>
@@ -278,7 +294,11 @@ nerdy, loveable, and highly-driven team that values doing things right and drivi
                                 <li>Implementing library for translating data sets between discretized and polynomial spline/clothoid representations</li>
                                 <li>And much, much more!</li>
                             </ul>
-                            <a href="mailto:jobs@paralleldomain.com">
+                            <a href="mailto:jobs@paralleldomain.com?body=In the subject line, please add FULL NAME and POSITION TITLE you are applying for.%0D%0A%0D%0A
+
+In the email, please tell us what excites you about Parallel Domain and why you are applying for the position. As a company, we care about creating an environment where people can be creative, focused, empathetic, and inspired. Feel free to highlight what this means to you, how you may be a good fit, and/or how you would like to add to the culture. :-)%0D%0A%0D%0A
+
+Please also include your resume, portfolio, and/or LinkedIn profile. We'll be in touch with you in a few days! Thanks for applying -- we look forward to seeing you in the parallel domain." target="_blank">
                                 <button>Apply</button>
                             </a>
                         </div>
@@ -309,7 +329,11 @@ nerdy, loveable, and highly-driven team that values doing things right and drivi
                                 <li>Developing agent behavior models</li>
                                 <li>And much, much more!</li>
                             </ul>
-                            <a href="mailto:jobs@paralleldomain.com">
+                            <a href="mailto:jobs@paralleldomain.com?body=In the subject line, please add FULL NAME and POSITION TITLE you are applying for.%0D%0A%0D%0A
+
+In the email, please tell us what excites you about Parallel Domain and why you are applying for the position. As a company, we care about creating an environment where people can be creative, focused, empathetic, and inspired. Feel free to highlight what this means to you, how you may be a good fit, and/or how you would like to add to the culture. :-)%0D%0A%0D%0A
+
+Please also include your resume, portfolio, and/or LinkedIn profile. We'll be in touch with you in a few days! Thanks for applying -- we look forward to seeing you in the parallel domain." target="_blank">
                                 <button>Apply</button>
                             </a>
                         </div>
